@@ -26,6 +26,15 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>0.0.8</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.openjfx</groupId>
@@ -39,7 +48,21 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>de.kegelplay/de.olivergeisel.kegelplay.KegelplayApplication</mainClass>
+                    <mainClass>de.kegelplay.application/de.olivergeisel.kegelplay.KegelplayApplication</mainClass>
+                    <compilerArgs>
+                        <arg>-module-path</arg>
+                        <arg>${project.build.directory}/modules</arg>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                    <launcher>app</launcher>
+                    <jlinkZipName>app</jlinkZipName>
+                    <jlinkImageName>app</jlinkImageName>
+                    <noManPages>true</noManPages>
+                    <stripDebug>true</stripDebug>
+                    <noHeaderFiles>true</noHeaderFiles>
+                    <options>
+                        <option>--enable-preview</option>
+                    </options>
                 </configuration>
             </plugin>
             <!-- <plugin>
